# wc

./: .gitignore  README.md  dash_app.py  main.py  pyproject.toml
assets/: dash.css
scripts/: elo.py  features.py  fixtures.py  inference.py  inference_retro.py  model.py  retro_predict.py  save_predictions.py  stats.py  test.py  tm.py  upcoming.py
scripts/archived/: tm_scrape.py
scripts/data_collection/: elo.py  features 2.py  features.py  stats.py
scripts/tools/: columns.py  maps.py  net.py  tm.R
