[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wc*"]

[project]
name = "wc"
version = "0.1.0"
description = "world cup prediction model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "dash>=2.18.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.11.0",
    "shap>=0.49.1",
    "xgboost>=2.1.4",
]

[tool.uv]
package = true
